--- a/table.html
+++ b/table.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table HTML</title>
     <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style/nav.css">
 </head>
+
 <body>
-     <!-- header section -->
+    <!-- header section -->
     <header>
         <h1>Learning Table in HTML</h1>
+        <nav>
+            <ul>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="table.html">Table</a></li>
+            </ul>
+        </nav>
     </header>
 
-   <!-- Main section -->
+    <!-- Main section -->
 
     <main>
 
         <article>
-             <section>
+            <section>
                 <h2>Table</h2>
                 <p>Here is the below table format for rows and column</p>
                 <ul>
@@ -44,11 +53,11 @@
 
                     <tbody>
                         <tr>
-                           <td>1</td>
+                            <td>1</td>
                             <td>Bill Gates</td>
                             <td>Microsoft</td>
                             <td>£1000</td>
-                        </tr> 
+                        </tr>
                         <tr>
                             <td>2</td>
                             <td>Steve jobs</td>
@@ -79,7 +88,7 @@
                     </tfoot>
 
                 </table>
-             </section>
+            </section>
 
         </article>
     </main>
@@ -90,6 +99,7 @@
 
     </footer>
 
-    
+
 </body>
+
 </html>
