--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
     <title>More About Html5</title>
     <link rel="shortcut icon" href="../First Exercise/images/house-solid-full.svg" type="image/x-icon">
     <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style/nav.css">
 </head>
 <body>
 
@@ -16,7 +17,7 @@
         <!-- to add an image figure tag use and inside we add image with the image tag and also add figcaption tag to write the caption of the picture -->
          <!-- Every individual article can be write a footer tag if needed on top of actual footer -->
    <header>
-        <h1>Learning Table in HTML</h1>
+        <h1>Learning Form in HTML</h1>
         <nav>
             <ul>
                 <li><a href="form.html">Form</a></li>
