connection added with other pages

--- a/form.html
+++ b/form.html
@@ -22,6 +22,7 @@
             <ul>
                 <li><a href="form.html">Form</a></li>
                 <li><a href="table.html">Table</a></li>
+                <li><a href="practice.html">Practice</a></li>
             </ul>
         </nav>
     </header>
