--- a/practice.html
+++ b/practice.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Table practice</title>
     <link rel="stylesheet" href="practice.css">
+    <link rel="stylesheet" href="style/nav.css">
 </head>
 
 <body>
 
     <header>
-
-    </header>
+          <nav>
+            <ul>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="table.html">Table</a></li>
+                <li><a href="practice.html">Practice</a></li>
+            </ul>
 
     <main>
         <hr>
@@ -51,32 +56,32 @@
         </article>
 
         <article>
-               <section>
-                 <form>
+            <section>
+                <form>
                     <label for="feedback">
-                  <fieldset>
-                    <legend>Feedback Form</legend>
-                    <textarea name="feedback" id="feedback" cols="30" rows="10"></textarea>
-                  </fieldset>
-                  </label>
-                  </form>
-               </section>
-               <section>
-                  <form class="form">
-                       <label for="rate" class="rate">Participant Rate:
+                        <fieldset>
+                            <legend>Feedback Form</legend>
+                            <textarea name="feedback" id="feedback" cols="30" rows="10"></textarea>
+                        </fieldset>
+                    </label>
+                </form>
+            </section>
+            <section>
+                <form class="form">
+                    <label for="rate" class="rate">Participant Rate:
 
-                         <select name="rate" id="rate">
+                        <select name="rate" id="rate">
                             <option value="rate">Good</option>
                             <option value="rate">Excelent</option>
                             <option value="rate">Average</option>
                             <option value="rate">Poor</option>
                             <option value="rate">Bad</option>
-                         </select>
-                       </label>
-                       <input type="submit" value="Submit">
-                       <input type="reset" value="Reset">
-                  </form>
-               </section>
+                        </select>
+                    </label>
+                    <input type="submit" value="Submit">
+                    <input type="reset" value="Reset">
+                </form>
+            </section>
         </article>
 
     </main>
