--- a/form.html
+++ b/form.html
@@ -20,9 +20,9 @@
         <h1>Learning Form in HTML</h1>
         <nav>
             <ul>
-                <li><a href="form.html">Form</a></li>
+               <li><a href="form.html">Form</a></li>
                 <li><a href="table.html">Table</a></li>
-                <li><a href="practice.html">Practice</a></li>
+                <li><a href="index.html">Practice</a></li>
             </ul>
         </nav>
     </header>
