--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="form.html">Form</a></li>
                 <li><a href="table.html">Table</a></li>
-                <li><a href="practice.html">Practice</a></li>
+                <li><a href="index.html">Practice</a></li>
             </ul>
 
     <main>
