--- a/table.html
+++ b/table.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="form.html">Form</a></li>
                 <li><a href="table.html">Table</a></li>
-                <li><a href="practice.html">Practice</a></li>
+                <li><a href="index.html">Practice</a></li>
             </ul>
         </nav>
     </header>
