footer style added

--- a/form.html
+++ b/form.html
@@ -149,7 +149,7 @@
             
     </main>
 
-    <footer>
+    <footer class="foot">
           <p><small>&copy; 2026. All Rights reserved</small></p>
     </footer>
 </body>
