--- a/table.html
+++ b/table.html
@@ -96,7 +96,9 @@
 
     <!-- Footer section -->
 
-    <footer>
+    <footer class="foot">
+
+        <p><small>&copy; 2026.All rights reserved</small></p>
 
     </footer>
 
