--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Table practice</title>
-    <link rel="stylesheet" href="practice.css">
+    <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="style/nav.css">
 </head>
 
@@ -86,9 +86,10 @@
 
     </main>
 
-    <footer>
+    <footer class="foot">
 
-
+      <p><small>&copy; 2026.All Rights reserved</small></p>
+         
     </footer>
 
 </body>
