--- a/mtable.html
+++ b/mtable.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>More about Table Practice</title>
+    <link rel="stylesheet" href="style/nav.css">
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="form.html">Form</a></li>
+                 <li><a href="form.html">Form</a></li>
                 <li><a href="table.html">Table</a></li>
                 <li><a href="index.html">Practice</a></li>
+                <li><a href="mtable.html">More Table</a></li>
             </ul>
         </nav>
         <h3>More Table Practice</h3>
