--- a/table.html
+++ b/table.html
@@ -18,6 +18,7 @@
                 <li><a href="form.html">Form</a></li>
                 <li><a href="table.html">Table</a></li>
                 <li><a href="index.html">Practice</a></li>
+                <li><a href="mtable.html">More Table</a></li>
             </ul>
         </nav>
     </header>
