--- a/mtable.html
+++ b/mtable.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>More about Table Practice</title>
     <link rel="stylesheet" href="style/nav.css">
+    <link rel="stylesheet" href="style/mtable.css">
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                 <li><a href="form.html">Form</a></li>
+                <li><a href="form.html">Form</a></li>
                 <li><a href="table.html">Table</a></li>
                 <li><a href="index.html">Practice</a></li>
                 <li><a href="mtable.html">More Table</a></li>
@@ -23,9 +24,77 @@
 
     <main>
         <article>
-            <section>
 
-            </section>
+
+            <table>
+                <header class="h3">
+                    <h3>Table Tennis Tournament</h3>
+                </header>
+                <caption>Tournament Schedule and Results</caption>
+                <section>
+                    <thead>
+                        <tr>
+                            <th>Round 1</th>
+                            <th>Player A</th>
+                            <th>Player B</th>
+                        </tr>
+
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Match 1</td>
+                            <td>John</td>
+                            <td>Alice</td>
+                        </tr>
+
+                        <tr>
+                            <td>Match 2</td>
+                            <td>Mark</td>
+                            <td>Sarah</td>
+                        </tr>
+                    </tbody>
+                </section>
+
+                <section>
+                    <thead>
+                        <tr>
+                            <th>Round 2</th>
+                            <th>Player C</th>
+                            <th>Player D</th>
+                        </tr>
+
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Match 3</td>
+                            <td>TBD</td>
+                            <td>TBD</td>
+                        </tr>
+
+                        <tr>
+                            <td>Match 4</td>
+                            <td>TBD</td>
+                            <td>TBD</td>
+                        </tr>
+                    </tbody>
+                </section>
+
+                <tfoot>
+                    <tr>
+                        <th>Final</th>
+                        <th>Winner of Match 3</th>
+                        <th>Winner of Match 4</th>
+                    </tr>
+
+                    <tr>
+                        <td>Champion</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
+                    </tr>
+                </tfoot>
+
+
+            </table>
         </article>
     </main>
 
