added new file to flex CSS model

--- a/index.html
+++ b/index.html
@@ -12,86 +12,90 @@
 <body>
 
     <header>
-          <nav>
+        <nav>
             <ul>
+
                 <li><a href="form.html">Form</a></li>
                 <li><a href="table.html">Table</a></li>
                 <li><a href="index.html">Practice</a></li>
                 <li><a href="mtable.html">More Table</a></li>
+                <li><a href="flex.html">Flex Practice</a></li>
+
             </ul>
 
-    <main>
-        <hr>
-        <article>
-            <section class="head">
-                <h4>Search your image here:
-                    <label for="search">
-                        <input type="search" name="search" id="search">
-                </h4>
-                </label>
-                <button>Search</button>
-            </section>
+            <main>
+                <hr>
+                <article>
+                    <section class="head">
+                        <h4>Search your image here:
+                            <label for="search">
+                                <input type="search" name="search" id="search">
+                        </h4>
+                        </label>
+                        <button>Search</button>
+                    </section>
 
-            <section>
-                <figure>
-                    <img src="../Assests/image/panda photo.jpg" alt="panda-photo" height="300">
-                </figure>
-                <a href="https://www.vecteezy.com/free-vector/kung-fu-panda" target="_blank">For more click here</a>
-            </section>
-            <hr>
-            <section class="form">
-                <form>
-                    <p>Feedback From:</p>
-                    <label for="name">Name:
-                        <input type="text" name="name" id="name">
-                    </label>
-                    <label for="date">Date:
-                        <input type="date" name="date" id="date">
-                    </label>
-                    <label for="comment">Comment:
-                        <textarea name="comment" id="comment" cols="40" rows="4"></textarea>
-                    </label>
-                    <input type="submit" value="Submit">
-                </form>
-            </section>
-        </article>
+                    <section>
+                        <figure>
+                            <img src="../Assests/image/panda photo.jpg" alt="panda-photo" height="300">
+                        </figure>
+                        <a href="https://www.vecteezy.com/free-vector/kung-fu-panda" target="_blank">For more click
+                            here</a>
+                    </section>
+                    <hr>
+                    <section class="form">
+                        <form>
+                            <p>Feedback From:</p>
+                            <label for="name">Name:
+                                <input type="text" name="name" id="name">
+                            </label>
+                            <label for="date">Date:
+                                <input type="date" name="date" id="date">
+                            </label>
+                            <label for="comment">Comment:
+                                <textarea name="comment" id="comment" cols="40" rows="4"></textarea>
+                            </label>
+                            <input type="submit" value="Submit">
+                        </form>
+                    </section>
+                </article>
 
-        <article>
-            <section>
-                <form>
-                    <label for="feedback">
-                        <fieldset>
-                            <legend>Feedback Form</legend>
-                            <textarea name="feedback" id="feedback" cols="30" rows="10"></textarea>
-                        </fieldset>
-                    </label>
-                </form>
-            </section>
-            <section>
-                <form class="form">
-                    <label for="rate" class="rate">Participant Rate:
+                <article>
+                    <section>
+                        <form>
+                            <label for="feedback">
+                                <fieldset>
+                                    <legend>Feedback Form</legend>
+                                    <textarea name="feedback" id="feedback" cols="30" rows="10"></textarea>
+                                </fieldset>
+                            </label>
+                        </form>
+                    </section>
+                    <section>
+                        <form class="form">
+                            <label for="rate" class="rate">Participant Rate:
 
-                        <select name="rate" id="rate">
-                            <option value="rate">Good</option>
-                            <option value="rate">Excelent</option>
-                            <option value="rate">Average</option>
-                            <option value="rate">Poor</option>
-                            <option value="rate">Bad</option>
-                        </select>
-                    </label>
-                    <input type="submit" value="Submit">
-                    <input type="reset" value="Reset">
-                </form>
-            </section>
-        </article>
+                                <select name="rate" id="rate">
+                                    <option value="rate">Good</option>
+                                    <option value="rate">Excelent</option>
+                                    <option value="rate">Average</option>
+                                    <option value="rate">Poor</option>
+                                    <option value="rate">Bad</option>
+                                </select>
+                            </label>
+                            <input type="submit" value="Submit">
+                            <input type="reset" value="Reset">
+                        </form>
+                    </section>
+                </article>
 
-    </main>
+            </main>
 
-    <footer class="foot">
+            <footer class="foot">
 
-      <p><small>&copy; 2026.All Rights reserved</small></p>
-         
-    </footer>
+                <p><small>&copy; 2026.All Rights reserved</small></p>
+
+            </footer>
 
 </body>
 
