--- a/mtable.html
+++ b/mtable.html
@@ -17,6 +17,7 @@
                 <li><a href="table.html">Table</a></li>
                 <li><a href="index.html">Practice</a></li>
                 <li><a href="mtable.html">More Table</a></li>
+                <li><a href="flex.html">Flex Practice</a></li>
             </ul>
         </nav>
         <h3>More Table Practice</h3>
