--- a/flex.html
+++ b/flex.html
@@ -24,33 +24,35 @@
     </header>
 
     <main>
-         <section class="parent">
-                <!-- div.class*20>{child-$} this structure helps to create more tag with one code writing-->
-                 <div class="child">child-1</div>
-                 <div class="child">child-2</div>
-                 <div class="child">child-3</div>
-                 <div class="child">child-4</div>
-                 <div class="child">child-5</div>
-                 <div class="child">child-6</div>
-                 <div class="child">child-7</div>
-                 <div class="child">child-8</div>
-                 <div class="child">child-9</div>
-                 <div class="child">child-10</div>
-                 <div class="child">child-11</div>
-                 <div class="child">child-12</div>
-                 <div class="child">child-13</div>
-                 <div class="child">child-14</div>
-                 <div class="child">child-15</div>
-                 <div class="child">child-16</div>
-                 <div class="child">child-17</div>
-                 <div class="child">child-18</div>
-                 <div class="child">child-19</div>
-                 <div class="child">child-20</div>
+        <section class="parent">
+            <!-- div.class*20>{child-$} this structure helps to create more tag with one code writing-->
+            <div class="child">child-1</div>
+            <div class="child">child-2</div>
+            <div class="child">child-3</div>
+            <div class="child">child-4</div>
+            <div class="child">child-5</div>
+            <div class="child">child-6</div>
+            <div class="child">child-7</div>
+            <div class="child">child-8</div>
+            <div class="child">child-9</div>
+            <div class="child">child-10</div>
+            <div class="child">child-11</div>
+            <div class="child">child-12</div>
+            <div class="child">child-13</div>
+            <div class="child">child-14</div>
+            <div class="child">child-15</div>
+            <div class="child">child-16</div>
+            <div class="child">child-17</div>
+            <div class="child">child-18</div>
+            <div class="child">child-19</div>
+            <div class="child">child-20</div>
 
-         </section>
+        </section>
     </main>
 
-    <footer>
+    <footer class="foot">
+
+        <p><small>&copy; 2026.All Rights reserved</small></p>
 
     </footer>
 </body>
